[workspace]
resolver = "2"
members = [
    "altium",
    "altium-macros",
    "ecad-cli",
    "ecadg",
]

[workspace.dependencies]
altium = { path = "altium" }
altium-macros = { path = "altium-macros" }
base64 = "0.22.1"
bytemuck = "1.16.0"
cfb = "0.10.0"
clap = { version = "4.5.4", features = ["derive"] }
convert_case = "0.6.0"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = "0.33.3"
egui_plot = "0.34.1"
env_logger = "0.11.3"
flate2 = "1.0.30"
glyphon = "0.10.0"
image = { version = "0.25.1", default-features = false }
log = "0.4.21"
lyon = "1.0.1"
num-traits = "0.2.19"
num_enum = "0.7.2"
proc-macro2 = "1.0.85"
quick-xml = "0.31.0"
quote = "1.0.36"
regex = "1.10.4"
rfd = "0.14.1"
rust-ini = "0.21.0"
serde = "1.0.203"
serde-xml-rs = "0.6.0"
serde_json = "1.0.117"
svg = "0.17.0"
syn = "2.0.66"
uom = "0.36.0"
uuid = "1.8.0"
wasm-bindgen-futures = "0.4"
xml-rs = "0.8.20"
