[workspace]
resolver = "2"
members = [
    "altium",
    "altium-macros",
    "ecad-cli",
    "ecadg",
]

[workspace.dependencies]
altium = { path = "altium" }
altium-macros = { path = "altium-macros" }
anyhow = "1.0.102"
base64 = "0.22.1"
bytemuck = "1.25.0"
cap-std = "4.0.2"
cfb = "0.14.0"
clap = { version = "4.5.60", features = ["derive"] }
convert_case = "0.11.0"
# eframe = "0.33.3"
# egui = "0.33.3"
# egui_extras = "0.33.3"
eframe = { git = "https://github.com/SuchAFuriousDeath/egui.git", rev = "2c86c19540e48a2cfd036123e4803fc2dedfb801" }
egui = { git = "https://github.com/SuchAFuriousDeath/egui.git", rev = "2c86c19540e48a2cfd036123e4803fc2dedfb801" }
egui_extras = { git = "https://github.com/SuchAFuriousDeath/egui.git", rev = "2c86c19540e48a2cfd036123e4803fc2dedfb801" }
egui_plot = "0.34.1"
env_logger = "0.11.9"
flate2 = "1.1.9"
glyphon = "0.10.0"
image = { version = "0.25.9", default-features = false }
log = "0.4.29"
lyon = "1.0.16"
num-traits = "0.2.19"
num_enum = "0.7.5"
proc-macro2 = "1.0.106"
quick-xml = "0.39.2"
quote = "1.0.45"
regex = "1.12.3"
rfd = "0.17.2"
rust-ini = "0.21.3"
serde = "1.0.228"
serde-xml-rs = "0.8.2"
serde_json = "1.0.149"
svg = "0.18.0"
syn = "2.0.117"
uom = "0.38.0"
uuid = "1.21.0"
wasm-bindgen-futures = "0.4"
xml-rs = "1.0.0"
