[package]
name = "altium-macros"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/pluots/altium"
description = "Macros for the `altium` crate"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.69"
quote = "1.0.33"
regex = "1.10.2"
syn = "2.0.39"
# syn = { version = "2.0.22", features = ["extra-traits"] }

[package.metadata.release]
shared-version = true
