[package]
name = "altium-macros"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/pluots/altium"
description = "Macros for the `altium` crate"

[lib]
proc-macro = true

[dependencies]
convert_case.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
syn.workspace = true

[package.metadata.release]
shared-version = true
