[package]
name = "altium"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/pluots/altium"
description = "A library for processing Altium file types"

[dependencies]
altium-macros = { path = "../altium-macros", version = "0.2.1" }
base64 = "0.21.7"
cfb = "0.9.0"
flate2 = "1.0.28"
# image = "0.24.6"
image = { version = "0.24.8", default-features = false, features = ["png", "bmp", "jpeg"] }
lazy_static = "1.4.0"
log = "0.4.20"
num_enum = "0.7.2"
quick-xml = "0.31.0"
regex = "1.10.3"
rust-ini = "0.20.0"
serde = "1.0.195"
serde-xml-rs = "0.6.0"
svg = "0.14.0"
uuid = { version = "1.7.0", features = ["v1", "v4", "fast-rng"]}
xml-rs = "0.8.19"

[dev-dependencies]
env_logger = "0.11.0"

[package.metadata.release]
shared-version = true

# Can't run replacements at workspace root. Need to use this "hacky" sort of way.
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = '\[Unreleased\]'
replace = "[{{version}}]"
exactly = 2

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = '\.\.\.HEAD'
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "<!-- next-header -->"
replace = """\
  <!-- next-header -->\n\n\
  ## [Unreleased] - ReleaseDate\n\n\
  ### Added\n\n\
  ### Changed\n\n\
  ### Removed\n\n\
  """
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "<!-- next-url -->"
replace = """\
  <!-- next-url -->\n\
  [Unreleased]: https://github.com/pluots/altium/compare/{{tag_name}}...HEAD\
  """
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "Cargo.toml"
# Need \d match so we don't accidentally match our pattern here
search = 'altium-macros = \{ path = "../altium-macros", version = "\d.*" \}'
replace = 'altium-macros = { path = "../altium-macros", version = "{{version}}" }'
