[package]
name = "altium"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/pluots/altium"
description = "A library for processing Altium file types"
# Selected to use `slice_first_last_chunk`
rust-version = "1.85"

[dependencies]
altium-macros.workspace = true
base64.workspace = true
cfb.workspace = true
flate2.workspace = true
image = { workspace = true, features = ["png", "bmp", "jpeg"] }
log.workspace = true
num-traits.workspace = true
num_enum.workspace = true
quick-xml.workspace = true
regex.workspace = true
rust-ini.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-xml-rs.workspace = true
svg.workspace = true
uom.workspace = true
uuid = { workspace = true, features = ["v1", "v4", "fast-rng", "serde"]}
xml-rs.workspace = true

[dev-dependencies]
env_logger.workspace = true

[features]
_sealed = []

[package.metadata.release]
shared-version = true

# Can't run replacements at workspace root. Need to use this "hacky" sort of way.
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = '\[Unreleased\]'
replace = "[{{version}}]"
exactly = 2

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = '\.\.\.HEAD'
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "<!-- next-header -->"
replace = """\
  <!-- next-header -->\n\n\
  ## [Unreleased] - ReleaseDate\n\n\
  ### Added\n\n\
  ### Changed\n\n\
  ### Removed\n\n\
  """
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "<!-- next-url -->"
replace = """\
  <!-- next-url -->\n\
  [Unreleased]: https://github.com/pluots/altium/compare/{{tag_name}}...HEAD\
  """
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "Cargo.toml"
# Need \d match so we don't accidentally match our pattern here
search = 'altium-macros = \{ path = "../altium-macros", version = "\d.*" \}'
replace = 'altium-macros = { path = "../altium-macros", version = "{{version}}" }'
