[package]
name = "ecadg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altium = { path = "../altium", version = "0.2.1", features = ["_sealed"] }
# FIXME: use wgpu 0.20 when available <https://github.com/emilk/egui/pull/4560>
# egui = "0.27.2"
# egui_extras = "0.27.2"
# egui_plot = "0.27.2"
egui = { git = "https://github.com/emilk/egui.git", branch = "emilk/wgpu-0.20"}
egui_extras = { git = "https://github.com/emilk/egui.git", branch = "emilk/wgpu-0.20"}
egui_plot = { git = "https://github.com/emilk/egui.git", branch = "emilk/wgpu-0.20"}
log = "0.4.21"
serde = "1.0.203"
rfd = "0.14.1"
regex = "1.10.4"
bytemuck = "1.16.0"
lyon = "1.0.1"
# FIXME: don't use git once there is a new release, <https://github.com/grovesNL/glyphon/issues/94>
# glyphon = "0.5.0"
glyphon = { git = "https://github.com/grovesNL/glyphon.git", ref = "2a457087674b0c124d37c85bc6769ba27dcde173"}

[dependencies.eframe]
# version = "0.27.2"
git = "https://github.com/emilk/egui.git"
branch = "emilk/wgpu-0.20"
reg = "3dca4c667f30fe7199433d3607efbe15c76a1cb6"
default-features = false
features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts",   # Embed the default egui fonts.
    "wgpu",            # Use the wgpu backend rather than glow
    "wayland",
    "persistence",     # Enable restoring app state when restarting the app.
    "x11",
]

[features]
default = ["_debug"]
_debug = []

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# # Optimize all dependencies even in debug builds:
# [profile.dev.package."*"]
# opt-level = 2
