[package]
name = "ecadg"
version = "0.1.0"
edition = "2021"

[dependencies]
altium = { path = "../altium", version = "0.2.1", features = ["_sealed"] }
egui = "0.33.3"
egui_extras = "0.33.3"
egui_plot = "0.34.1"
eframe = { version = "0.33.3", features = ["wgpu", "persistence"] }
log = "0.4.21"
serde = "1.0.203"
rfd = "0.14.1"
regex = "1.10.4"
bytemuck = "1.16.0"
lyon = "1.0.1"
glyphon = "0.10.0"

[features]
default = ["_debug"]
_debug = []

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# # Optimize all dependencies even in debug builds:
# [profile.dev.package."*"]
# opt-level = 2
