[package]
name = "ecadg"
version = "0.1.0"
edition = "2021"

[dependencies]
altium = { workspace = true, features = ["_sealed"] }
bytemuck.workspace = true
eframe = { workspace = true, features = ["wgpu", "persistence"] }
egui.workspace = true
egui_extras.workspace = true
egui_plot.workspace = true
glyphon.workspace = true
log.workspace = true
lyon.workspace = true
regex.workspace = true
rfd.workspace = true
serde.workspace = true

[features]
default = ["_debug"]
_debug = []

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true

# # Optimize all dependencies even in debug builds:
# [profile.dev.package."*"]
# opt-level = 2
