[package]
name = "ecadview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.11.0"
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy_framepace = "0.13.3"
egui = { version = "0.22.0", features = ["mint"] }
mint = "0.5.9"

# # Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1
# 
# [profile.dev.package."*"]
# opt-level = 3
