[package]
name = "ecadview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Use git until the polygon change lands
egui = "0.22.0"
altium = { path = "../altium", version = "0.1.0" }
eframe = { version = "0.22.0", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4.20"
serde = "1.0.183"
rfd = "0.11.4"
egui_dock = "0.6.3"
egui_extras = "0.22.0"
regex = "1.9.3"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
